<resources>
    <string name="app_name">InstaTexnopos</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="fill_the_field">Fill th field</string>
    <string name="btn_menu_home">Home</string>
    <string name="btn_menu_search">Search</string>
    <string name="btn_menu_post">Post</string>
    <string name="btn_menu_favorite">Like</string>
    <string name="btn_menu_profil">Profil</string>
    <string name="posts">Публикации</string>
    <string name="followers">Подписчики</string>
    <string name="following">Подписки</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="edit_profile_image">Изменить фото профиля</string>
    <string name="edit_name">Имя</string>
    <string name="edit_biography">Биография</string>
    <string name="write_a_interesting_story">Write a interesting story</string>
    <string name="send_a_post">Send a post</string>
</resources>