<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/homeFragment"
    android:icon="@drawable/ic_baseline_home_24"
    android:title="@string/btn_menu_home"/>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/btn_menu_search"/>
    <item
        android:id="@+id/addPostFragment"
        android:icon="@drawable/ic_outline_add_box_24"
        android:title="@string/btn_menu_post"/>
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/btn_menu_favorite"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/btn_menu_profil"/>
</menu>