<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size_toolbar"
            android:text="brrasul404.@gmail.com"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
    </Toolbar>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="86dp"
        android:layout_height="86dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_standart"
        android:src="@drawable/user"/>
    <LinearLayout
        android:id="@+id/llPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/llFollowers"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:layout_marginEnd="@dimen/margin_extra_small"
        android:layout_marginStart="@dimen/margin_standart">
        <TextView
            android:id="@+id/tvPostCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="25"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvPostTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="@string/posts"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFollowers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/llPost"
        app:layout_constraintEnd_toStartOf="@id/llFollowing"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:layout_marginEnd="@dimen/margin_extra_small">
        <TextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="241"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvFollowersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="@string/followers"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llFollowing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/llFollowers"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:layout_marginEnd="@dimen/margin_standart">
        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="199"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvFollowingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_toolbar"
            android:text="@string/following"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Марк Цукерберг"
        android:textSize="@dimen/text_size_standart"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        android:layout_marginStart="@dimen/margin_standart"
        android:layout_marginTop="@dimen/margin_standart"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvBiography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="May 14,1984 \nUSA,New York \nPhillips Exeter Academy\nFounding Facebook"
        android:textSize="@dimen/text_size_standart"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:layout_marginStart="@dimen/margin_standart"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/tvBiography"
        android:layout_marginTop="@dimen/margin_standart"
        android:text="@string/_profile"
        android:textSize="@dimen/text_size_standart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:lines="1"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:spanCount="3"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
</androidx.constraintlayout.widget.ConstraintLayout>